<resources>
    <string name="app_name">BetterBaskets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="check_internet">It seems that your internet is not working. Please check</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="password_not_less_than_6">Passwword should not be less than 6 then 6 characters</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_valid_age">Enter Valid age</string>
    <string name="rationale_title">Permissions required</string>
    <string name="rationale_message">This app requires some permissions for the working. Please confirm to continue </string>
    <string name="postal_code">Postal Code</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Please add image</string>
    <string name="don_t_receive_the_otp">Did not receive the OTP?</string>
    <string name="verify_code">Verify and Proceed</string>
    <string name="resend_otp">   Resend OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="with_ads">Book now with Ads</string>
    <string name="without_ads">Book now without Ads (Pay ₹2)</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="product_name">Product Name</string>
    <string name="r_test_key">rzp_test_GzSjAgoao6iHnj</string>
    <string name="r_test_secret">wBWuwMhIzf6aMuYidGGZDJYg</string>
    <string name="pay">Pay</string>

    <!--<string name="r_test_key">rzp_test_9udAAtqq4lUMqs</string>
    <string name="r_test_secret">oP4NI1rrvD3NHxSUYHaZBY9f</string>-->

</resources>