<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:id="@+id/mProfileImg"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/ic_user_image" />



                    <TextView
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="14dp"
                        android:text="Upload Picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>


                </LinearLayout>


            </LinearLayout>

            <ScrollView
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    style="@style/app_form_style"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:text="6478876513"
                            android:id="@+id/mMobileNumberEt"
                            android:textSize="14dp"
                            android:padding="@dimen/_7sdp"
                            android:background="@drawable/edit_text_bg"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number"
                            android:imeOptions="actionNext"
                            android:maxLength="@integer/phone_max_length"
                            android:singleLine="true">


                        </com.google.android.material.textfield.TextInputEditText>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:text="Gagan Store"
                            android:textSize="14dp"
                            android:id="@+id/mNameEt"
                            android:padding="@dimen/_7sdp"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:singleLine="true">


                        </com.google.android.material.textfield.TextInputEditText>


                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_marginTop="@dimen/_15sdp"
                        android:gravity="center"
                        android:id="@+id/addressLl"
                        android:background="@drawable/edit_text_bg"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:maxLines="3"
                            android:hint="Address"
                            android:textSize="14dp"
                            android:background="@android:color/transparent"
                            android:layout_weight="1.7"
                            android:padding="10dp"
                            android:id="@+id/addressEt"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_60sdp" />

                        <ImageView
                            android:id="@+id/currentPositionIMg"
                            android:padding="@dimen/_10sdp"
                            android:layout_weight="0.3"
                            android:src="@drawable/ic_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </ImageView>


                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mPasswordTl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:passwordToggleEnabled="true"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:text="User@123"
                            android:textSize="14dp"
                            android:padding="@dimen/_7sdp"
                            android:background="@drawable/edit_text_bg"
                            android:inputType="textPassword"
                            android:id="@+id/mPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:maxLength="@integer/username_max_length"
                            android:singleLine="true">


                        </com.google.android.material.textfield.TextInputEditText>


                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_15sdp"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/customerCb"
                            android:checked="true"
                            android:text="Customer"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </CheckBox>

                        <CheckBox
                            android:id="@+id/storeCb"
                            android:text="Store Owner"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">

                        </CheckBox>


                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/mRegisterBtn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="right"
                            android:background="@drawable/button_bg_red"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="Already Regsitered ?"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    </TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/mLoginBtn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="right"
                            android:background="@drawable/button_bg_transparent"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black"
                            android:textSize="16dp" />

                    </LinearLayout>











                </LinearLayout>


            </ScrollView>


        </LinearLayout>


    </ScrollView>







</LinearLayout>